# rust-file-upload

./: Cargo.toml
src/: main.rs
