[package]
name = "rust-music"
version = "0.1.0"
authors = ["glowatsk <glowatsk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.5", default-features = false }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
lazy_static = "1.4.0"
config = "0.11"
bytes = "1.0.1"
